--- a/01-aora/package.json
+++ b/01-aora/package.json
@@ -20,18 +20,21 @@
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.9",
     "expo-router": "~6.0.16",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.9",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.19.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
